--- a/web/src/pages/chat/styles.css
+++ b/web/src/pages/chat/styles.css
@@ -29,6 +29,8 @@
   justify-content: flex-start;
   align-items: flex-start;
   word-break: break-all;
+
+  overflow-y: scroll;
 }
 
 .send-container {
@@ -73,8 +75,8 @@
   overflow-wrap: break-word;
 }
 
-.message-text-container + div {
-  padding-top: 10px;
+.message-text-container {
+  padding-bottom: 10px;
 }
 
 .chat-error-message {
