--- a/web/src/pages/login/styles.css
+++ b/web/src/pages/login/styles.css
@@ -14,6 +14,8 @@ form {
   background: #fff;
   padding: 30px;
   border-radius: 5px;
+
+  box-shadow: 4px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 form label {
@@ -41,11 +43,16 @@ form .input-row-container {
 }
 
 form button {
+  display: flex;
+  flex-direction: column;
   height: 44px;
   background-color: rgb(98, 245, 135);
+  justify-content: center;
+  align-items: center;
   border: 0px;
   border-radius: 5px;
-  padding: 7px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: 10px;
 
   font-size: 16px;
